--- a/views/navigationbar/navigationbar.html
+++ b/views/navigationbar/navigationbar.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title></title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+  <head> </head>
   <body>
-    <div class="navbar" id="navbar">
+    <div class="navbar">
       <ul>
         <li><a href="#">a</a></li>
         <li><a href="#">b</a></li>
