--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  height: max-content;
 }
 
 a {
@@ -44,18 +45,14 @@ ul {
   width: 100%;
 }
 
-.centered-item {
-  place-self: center;
-}
-
-.stretch-item {
-  justify-self: stretch;
-  align-self: stretch;
-}
-
-.right-item {
-  justify-self: end;
-}
-
 .centered-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 576px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
 }
