commit navbar and data

--- a/views/navigationbar/navigationbar.html
+++ b/views/navigationbar/navigationbar.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <link rel="stylesheet" href="./views/navigationbar/navbar.css" />
+  </head>
   <body>
-    <div class="navbar">
-      <ul>
-        <li><a href="#">a</a></li>
-        <li><a href="#">b</a></li>
-        <li><a href="#">c</a></li>
-        <li><a href="#">d</a></li>
-        <li><a href="#">e</a></li>
+    <div class="top-comp">
+      <div align="center" class="logo">
+        <img id="hamburger" src="../../images/menu.svg" alt="hambuger icon" />
+        <a href="#">
+          <img src="../../images/logo.png" alt="logo" />
+        </a>
+      </div>
+      <ul class="navbar">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Collection</a></li>
+        <li><a href="#">Blogs</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
+      <div class="signin">
+        <img src="../../images/user.png" alt="user icon" />
+        <a href="#">Login</a><span>/</span>
+        <a href="#">Sign up</a>
+        <span>|</span>
+        <img src="../../images/search.svg" alt="search icon" />
+        <img src="../../images/cart.svg" alt="cart icon" />
+      </div>
     </div>
   </body>
 </html>
