--- a/views/navigationbar/navbar.css
+++ b/views/navigationbar/navbar.css
@@ -3,6 +3,8 @@
   grid-template-columns: 1.5fr 6fr 2.5fr;
   padding: 16px 32px;
   background-color: #fff;
+  max-height: auto;
+  min-height: 8vh;
 }
 
 .navbar {
@@ -29,6 +31,11 @@
   color: black;
 }
 
+.navbar img {
+  width: 12px;
+  height: auto;
+}
+
 ul {
   list-style: none;
 }
@@ -37,8 +44,27 @@ ul {
   display: inline-block;
 }
 
-.navbar li a:hover {
+.navbar li:hover a {
   color: #ba933e;
+}
+
+.navbar li:hover .dropdown {
+  display: grid;
+  position: absolute;
+  left: 5%;
+  right: 5%;
+  margin-top: 1%;
+  opacity: 1;
+  animation: submenu 0.3s normal;
+}
+
+.navbar .dropdown {
+  display: none;
+  width: auto;
+  height: auto;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -71,6 +97,59 @@ ul {
 
 .signin a:hover {
   color: #ba933e;
+}
+
+.collection-dd {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.collection-dd img {
+  width: auto;
+  height: auto;
+}
+
+.navbar .collection-dd a {
+  display: inline-block;
+  color: black;
+  padding: 6px 6px;
+}
+
+.navbar .collection-dd a:hover {
+  color: #ba933e;
+}
+
+.navbar .collection-dd div {
+  align-self: center;
+  justify-self: center;
+}
+
+.navbar .shop-dd {
+  grid-template-columns: 0.5fr 1fr 2fr;
+}
+
+.shop-dd img {
+  width: 30%;
+  height: auto;
+}
+
+.promotion img {
+  width: 100%;
+  height: auto;
+}
+
+@keyframes submenu {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @media screen and (max-width: 1135px) {
