--- a/views/navigationbar/navigationbar.html
+++ b/views/navigationbar/navigationbar.html
@@ -18,7 +18,7 @@
         <li>
           <a href="#"
             >Shop
-            <img src="../../images/downarrow.svg" alt="down arr" />
+            <img src="../images/downarrow.svg" alt="down arr" />
           </a>
           <div class="dropdown shop-dd">
             <div>
