--- a/views/navigationbar/navigationbar.html
+++ b/views/navigationbar/navigationbar.html
@@ -137,7 +137,9 @@
         <a href="#">Sign up</a>
         <span>|</span>
         <img src="../../images/search.svg" alt="search icon" />
-        <img src="../../images/cart.svg" alt="cart icon" />
+        <a href="cart.html">
+          <img src="../../images/cart.svg" alt="cart icon" />
+        </a>
       </div>
     </div>
   </body>
