--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/style_collection.css" />
+    <link rel="stylesheet" href="../../style/style_blog.css" />
     <link rel="stylesheet" media="mediatype and|not|only (expressions)" href="print.css">
-    <title>Collections</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="collection">
-        <div class="collection__background">
-            <div class="collection__background__direction">
-                <h1>Collections</h1>
+    <div class="blog">
+        <div class="blog__background">
+            <div class="blog__background__direction">
+                <h1>Blogs</h1>
                 <span><b>Home ></b></span>
-                <span> Collections</span>
+                <span> Life styles</span>
             </div>
             <img src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/accessories.jpg?v=1589429290" />
         </div>
+    
     </div>
 </body>
 </html>
