Oanh push trước phần footer. Trong đây có các hình và logo. Ban đầu hiển thị được logo, về sau thì không có cái nào hiển thị được hết, mn check dùm tui.

--- a/views/footer/footer.html
+++ b/views/footer/footer.html
@@ -1,7 +1,87 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body>
-    <div class="footer">This is the footer</div>
-  </body>
+<head>
+    <meta charset="utf-8" />
+    <title>Footer</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" href="../../style.css" />
+</head>
+<body>
+    <main>CONTENT</main>
+    <header>
+        <p></p>
+    </header>
+    <footer class="footer">
+        <ul class="footer-right">
+            <li>
+                <div class="footer-left">
+                    <img src="img/logo_500x500.png" alt="LogoMIU" />
+                    <div class="socials">
+                        <a href="#">
+                            <img src="img/icon-facebook.png" alt="Facebook">
+                        </a>
+                        <a href="#">
+                            <img src="img/icon-instagram.png" alt="Instagram">
+                        </a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <h4>Information Company</h4>
+                <ul class="box">
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="#">Track Your Order</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Payment Methods</a></li>
+                    <li><a href="#">Shipping Guide</a></li>
+                    <li><a href="#">Products Support</a></li>
+                    <li><a href="#">Gift Card Balance</a></li>
+                </ul>
+            </li>
+
+            <li class="features">
+                <h4>More From MIU</h4>
+                <ul class="box">
+                    <li><a href="#">About MIU</a></li>
+                    <li><a href="#">Our Guarantees</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Return Policy</a></li>
+                    <li><a href="#">Delivery & Return</a></li>
+                    <li><a href="#">Sitemap</a></li>
+                </ul>
+            </li>
+
+            <li class="features">
+                <h4>Let's Talk</h4>
+                <ul class="box">
+                    <li><a href="#"></a>(+84) 987 543 210</li>
+                    <li><p>miufashion.contact@gmail.com</p></li>
+                </ul>
+                <h4>Find Us</h4>
+                <ul class="box">
+                    <li><p>669 National Road 1A, Quarter 3, Thu Duc, Ho Chi Minh City</p></li>
+                </ul>
+            </li>
+        </ul>
+        <hr />
+        <div class="footer-bottom">
+            <p>© 2020 MIUFashion. All Rights Reserved</p>
+            <div class="item-paymentmethod">
+                <a href="#">
+                    <img src="img/icon-paypal.png" alt="Paypal">
+                </a>
+                <a href="#">
+                    <img src="img/icon-ebay.png" alt="Epay">
+                </a>
+                <a href="#">
+                    <img src="img/icon-mastercard.png" alt="MasterCard">
+                </a>
+                <a href="#">
+                    <img src="img/icon-visa.png" alt="Visa">
+                </a>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
