--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
@@ -57,5 +57,104 @@ ul {
   }
 }
 
+/*Oanh thêm Phần Footer*/
+footer {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    flex-flow: row wrap;
+    padding: 30px;
+    color: white;
+    background-color: black;
+}
+
+    footer > * {
+        flex: 1 100%;
+    }
+
+.footer-left {
+    margin-right: 1.25em;
+    margin-bottom: 2em;
+}
+
+    .footer-left img {
+        width: 50%;
+    }
+
+h4 {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.footer ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.footer li {
+    line-height: 2em;
+}
+
+.footer a {
+    text-decoration: none;
+}
+
+.footer-right {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+    .footer-right > * {
+        flex: 1 50%;
+        margin-right: 1.25em;
+    }
+
+.box a {
+    color: #999;
+}
+
+.footer-bottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    color: #999;
+}
+
+.footer-left p {
+    padding-right: 20%;
+    color: #999;
+}
+
+.socials a {
+    background: #364a62;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.social a i {
+    color: #e7f2f4;
+    padding: 10px 12px;
+    font-size: 20px;
+}
+
+@media screen and (min-width:600px) {
+    .footer-right > * {
+        flex: 1;
+    }
+
+    .footer-left {
+        flex: 1 0px;
+    }
+
+    .footer-left {
+        flex: 2 0px;
+    }
+}
+
+/*Oanh thêm */
 
 
