--- a/views/modal/addproduct.html
+++ b/views/modal/addproduct.html
@@ -4,8 +4,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="..\\style/style_modal.css" />
-    <link rel="stylesheet" href="..\\style.css" />
+    <link rel="stylesheet" href="./style/style_modal.css" />
     <title></title>
 </head>
 <body>
@@ -20,21 +19,21 @@
                 <form action="#">
                     <span class="close">&times;</span>
                     <table width="100%" style="text-align:center">
-                        <tr style="height:70px">
+                        <tr style="height:50px">
                             <td rowspan="4">
-                                <img src="https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/women_180x.jpg?v=1589429115"
-                                     alt="img 0" width="300" height="300" />
+                                <img style="text-align:right" src="https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/women_180x.jpg?v=1589429115"
+                                     alt="img 0" width="250" height="250" />
                             </td>
                             <td class="textTitle">Product name</td>
                         </tr>
-                        <tr style="height:70px">
+                        <tr style="height:50px">
                             <td class="textAddSuccess">Has been added <br />to the cart</td>
                         </tr>
-                        <tr style="height:70px">
-                            <td><button class="button_2">View Cart</button></td>
+                        <tr style="height:50px">
+                            <td><button class="buttonBT">View Cart</button></td>
                         </tr>
-                        <tr style="height:70px">
-                            <td><button class="button_1">Check Out</button></td>
+                        <tr style="height:50px">
+                            <td><button class="buttonBT">Check Out</button></td>
                         </tr>
                     </table>
 
