--- a/style/style_login.css
+++ b/style/style_login.css
@@ -60,9 +60,9 @@ ul {
 }
 
 h1 {
-    color: #009999;
-    font-size: 20px;
-    margin-bottom: 30px;
+    color: #000000;
+    font-size: 30px;
+    margin-bottom: 25px;
 }
 
 .input-box {
@@ -75,18 +75,52 @@ h1 {
         width: 100%;
         border: 1px solid #cccccc;
         outline: none;
+        font-size:17px;
     }
-
+        .input-box input:visited {
+            border: 3px solid #cccccc;
+        }
+a {
+    text-align: center;
+    color: darkblue;
+}
+a:hover{
+    color:midnightblue;
+    font-weight:bold;
+}
 .btn-box {
     text-align: center;
     margin-top: 30px;
 }
-
-    .btn-box button {
+input[type=text]:focus {
+    border: 2px solid ;
+    border-radius: 4px;
+    background-color:aliceblue;
+}
+input[type=email]:focus {
+    border: 2px solid;
+    border-radius: 4px;
+    background-color: aliceblue;
+}
+input[type=password]:focus {
+    border: 2px solid;
+    border-radius: 4px;
+    background-color: aliceblue;
+}
+input[type=button]:hover {
+    border: 2px solid;
+    border-radius: 4px;
+    background-color:wheat;
+    color:black;
+    border:0;
+}
+    input[type= button] {
         padding: 7.5px 15px;
         border-radius: 2px;
         width:100%;
-        background-color: #009999;
+        font-size:17px;
+        background-color: #000000;
+        font-weight:bold;
         color: #ffffff;
         border: none;
     }
