--- a/views/login_register/register.html
+++ b/views/login_register/register.html
@@ -14,11 +14,11 @@
         <div class="container-nd">
             <div class="login-form">
                 <form action="" method="post">
-                    <h1>Create An Account</h1>
+                    <h1>Create Account</h1>
                     <div>
                         <table width="100%">
                             <tr>
-                                <td>
+                                <td >
                                     <div class="input-box">
                                         <input type="text" name="customer[first_name]" id="FirstName" class="form-control" placeholder="First Name" required>
                                     </div>
@@ -33,17 +33,13 @@
                     </div>
                     <div class="input-box">
                         <i></i>
-                        <input type="email" placeholder="Email">
+                        <input type="email" placeholder="Email" required>
                     </div>
                     <div class="input-box">
                         <i></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="Password" required>
                     </div>
-                    <div class="btn-box">
-                        <button type="submit">
-                            Create An Account
-                        </button>
-                    </div>
+                    <input class="container-nd" type="button" value="Create Account" />
                 </form>
             </div>
         </div>
