--- a/views/cardProduct/productCard.html
+++ b/views/cardProduct/productCard.html
@@ -4,7 +4,7 @@
   <body>
     <div class="parent">
       <div class="child1">
-        
+        <!-- thu -->
           <div>
             <h4> Product Categories</h4>
             
