--- a/views/collections/collection_site.html
+++ b/views/collections/collection_site.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style/style_collection.css" />
     <link rel="stylesheet" media="mediatype and|not|only (expressions)" href="print.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
+    <script src="../../functions/navigationbar.js"></script>
     <title>Collections</title>
 </head>
 <body>
+    <!-- Hanf -->
+    <div ng-app="navBar" id="headerHolder" class="row header">
+        <nav-bar></nav-bar>
+    </div>
     <div class="collection">
         <div class="collection__background">
             <div class="collection__background__direction">
