--- a/style.css
+++ b/style.css
@@ -155,6 +155,97 @@ h4 {
     }
 }
 
-/*Oanh thêm */
+/*Oanh thêm phần Contact Page*/
+.mapouter {
+    position: relative;
+    text-align: right;
+    margin:10px;
+    padding:10px;
+    
+}
+
+.gmap_canvas {
+    overflow: hidden;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+}
+
+.container {
+    width: 100%;
+    margin: 50px;
+    padding: 100px;
+}
+
+
+.contact-box {
+    display: flex;
+}
+
+.contact-left {
+    flex-basis: 40%;
+    padding: 40px;
+    background: #E8E8E8;
+    margin: 40px;
+}
+
+.contact-right {
+    flex-basis: 60%;
+    padding: 40px 60px;
+    margin: 10px 40px 40px 40px;
+}
+
+input-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.input-row .input-group {
+    flex-basis: 45%;
+}
+
+.input-group{
+    margin:10px;
+    padding:10px;
+}
+
+input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+    padding-bottom: 5px;
+}
+
+textarea {
+    width: 100%;
+    border: 1px solid #ccc;
+    outline: none;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color:#ccc;
+    width: 100px;
+    font-size:20px;
+    outline: none;
+    height: 35px;
+    border-radius: 20px;    
+    margin-top: 20px;
+    position:absolute;
+}
+
+.contact-right h3 {
+    color: #808080;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+
 
 
