--- a/views/footer/footer.html
+++ b/views/footer/footer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -66,7 +66,7 @@
         </ul>
         <hr />
         <div class="footer-bottom">
-            <p>© 2020 MIUFashion. All Rights Reserved</p>
+            <p>ï¿½ 2020 MIUFashion. All Rights Reserved</p>
             <div class="item-paymentmethod">
                 <a href="#">
                     <img src="img/icon-paypal.png" alt="Paypal">
