--- a/views/footer.html
+++ b/views/footer.html
@@ -2,6 +2,6 @@
 <html>
   <head></head>
   <body>
-    <div class="footer">This is the footer</div>
+    <div class="footer"><h1>This is the footer</h1></div>
   </body>
 </html>
