--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   height: max-content;
+  overflow-x: hidden;
 }
 
 a {
@@ -56,6 +57,3 @@ ul {
     grid-template-columns: 1fr;
   }
 }
-
-
-
