--- a/views/collections/collection_site.html
+++ b/views/collections/collection_site.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../style.css" />
     <link rel="stylesheet" href="../../styles/navbar.css" />
     <link rel="stylesheet" href="../../style/style_collection.css" />
     <link
@@ -12,10 +13,56 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
+    <script src="../../functions/navigationbar.js"></script>
+    <script src="../../functions/footer.js"></script>
     <title>Collections</title>
+
+    <script>
+      var app = angular.module("AngularApp", []);
+      app.controller("CollectionController", function ($scope) {
+        $scope.collections = [
+          {
+            name: "Accesories",
+            image:
+              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/accessories_540x.jpg?v=1589428985",
+            quantity: 17,
+          },
+          {
+            name: "BackPacks",
+            image:
+              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/bag_540x.jpg?v=1589429021",
+            quantity: 17,
+          },
+          {
+            name: "HomePage",
+            image:
+              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/accessories_5e68ae61-8db3-4f19-a812-887b89310179_540x.jpg?v=1589814373",
+            quantity: 17,
+          },
+          {
+            name: "Shoes",
+            image:
+              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/shoes_540x.jpg?v=1589429091",
+            quantity: 17,
+          },
+          {
+            name: "Women",
+            image:
+              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/women_540x.jpg?v=1589429115",
+            quantity: 17,
+          },
+          {
+            name: "Men",
+            image:
+              "https://cdn.shopify.com/s/files/1/0276/4616/5110/collections/men_540x.jpg?v=1589429045",
+            quantity: 17,
+          },
+        ];
+      });
+    </script>
   </head>
-  <body>
-    <div ng-app="">
+  <body ng-app="AngularApp" ng-controller="CollectionController">
+    <div ng-app="navBar">
       <div ng-include="'../navigationbar.html'"></div>
     </div>
     <div class="collection">
@@ -29,6 +76,17 @@
           src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/accessories.jpg?v=1589429290"
         />
       </div>
+      <div class="collection__list">
+        <div ng-repeat="cl in collections" class="collection__list__item">
+          <img src="{{cl.image}}" />
+          <h1>{{cl.name}}</h1>
+          <p>{{cl.quantity}} products</p>
+          <button>SHOP THE COLLECTION</button>
+        </div>
+      </div>
+    </div>
+    <div ng-app="footer" class="footer">
+      <div ng-include="'../footer.html'"></div>
     </div>
   </body>
 </html>
