--- a/views/navigationbar.html
+++ b/views/navigationbar.html
@@ -69,7 +69,7 @@
       </div>
     </li>
     <li>
-      <a href="#"
+      <a href="../views/collections/collection_site.html"
         >Collection
         <img src="../../images/downarrow.svg" alt="down arr" />
       </a>
