--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Đăng nhập vào website</title>
+    <title>MIU Login</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../styles/login.css" />
     <script type="text/javascript" src="./functions/index.js"></script>
