--- a/views/footer.html
+++ b/views/footer.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../style.css" />
   </head>
   <body>
-    <main>CONTENT</main>
+    <!-- <main>CONTENT</main> -->
     <header>
       <p></p>
     </header>
