--- a/views/Carousel/carousel.html
+++ b/views/Carousel/carousel.html
@@ -42,7 +42,7 @@
         </div>
         <!--slide images end-->
         <!--automatic navigation start-->
-        <div class="navigation-auto">
+        <div class="carousel-auto">
           <div class="auto-btn1"></div>
           <div class="auto-btn2"></div>
           <div class="auto-btn3"></div>
@@ -51,7 +51,7 @@
         <!--automatic navigation end-->
       </div>
       <!--manual navigation start-->
-      <div class="navigation-manual">
+      <div class="carousel-manual">
         <label for="radio1" class="manual-btn"></label>
         <label for="radio2" class="manual-btn"></label>
         <label for="radio3" class="manual-btn"></label>
@@ -69,7 +69,7 @@
         if (counter > 4) {
           counter = 1;
         }
-      }, 5000);
+      }, 3000);
     </script>
   </body>
 </html>
