--- a/views/cardProduct/productCard.css
+++ b/views/cardProduct/productCard.css
@@ -143,3 +143,25 @@ hr {
   padding-left: 50px;
   padding-right: 50px;
 }
+.product-item-img{
+  width: 100%;
+  overflow: hidden;
+}
+.product-item-img img{
+  width: 100%;
+  border-radius: 7px 7px 0px 0px;
+  transition: 0.8s;
+}
+.product-item-detail{
+  padding: 10px;
+  min-height: 200px;
+  cursor: pointer;
+}
+.product-item-detail:hover h2{
+  color: var(--red);}
+   .cuisine{
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
